--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <div class= "container-fluid">
             
             <div id="weather">
-            </div>
-            <input type="text" class="get-weather">
- 			<button type="submit" class="btn">Get Weather</button>
+            <h1>Weather?</h1>
+            <input type="text" class="get-weather" placeholder="Zipcode">
+ 			<button type="submit" class="btn">Find it!</button>
             
+            </div>
         </div><!--end of container-->
 
 
