--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
         <div class= "container-fluid">
             
-            <div id="weather">
-            <h1>Weather?</h1>
-            <input type="text" class="get-weather" placeholder="Zipcode">
- 			<button type="submit" class="btn">Find it!</button>
             
-            </div>
+                <div id="inputs">
+                <h2>Weather?</h2>
+                    <input type="text" class="get-weather" placeholder="Zipcode">
+                    <button type="submit" class="btn">Find it!</button>
+                </div><!--end of id="inputs"-->
+            <div id="weather"></div><!--end of id="weather"-->
         </div><!--end of container-->
 
 
