--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
@@ -13,12 +15,12 @@
         <div class= "container-fluid">
             
             
-                <div id="inputs">
-                <h2>Weather?</h2>
+                <div class="row-fluid" id="inputs">
+                <h2 class="span12">Weather?</h2>
                     <input type="text" class="get-weather" placeholder="Zipcode">
                     <button type="submit" class="btn">Find it!</button>
                 </div><!--end of id="inputs"-->
-            <div id="weather"></div><!--end of id="weather"-->
+            <div class="row-fluid" id="weather"></div><!--end of id="weather"-->
         </div><!--end of container-->
 
 
